<resources>
    <string name="app_name">App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="edit_message">Listings</string>
    <string name="edit_message_home_title">Swapapp</string>
    <string name="edit_message_home_listing_1">listing 1\n price\n more stuff</string>
    <string name="posting_3">posting 3</string>
    <string name="posting_1">posting 1</string>
    <string name="posting_2">posting 2</string>
    <string name="welcome_to_the_math_quiz">Current Listings</string>
    <string name="button_1">button_1</string>
    <string name="button_2">button_2</string>
    <string name="textView3">text view 3</string>
    <string name="button_3">button_3</string>
</resources>
